--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -7,16 +7,29 @@ input, textarea {
   height: 35px;
   display: block;
   background-color: #e4e4e4;
+  border: 2px solid black;
   border-radius: 7px;
   margin: 1% 0;
-
+  transition: all 0.25s;
+  text-indent: 0.5em;
+  resize: none;
 }
+
+input:hover, textarea:hover {
+  transform: scale(1.1);
+}
+
 form button {
   background-color: rgb(6, 19, 93);
   padding: 2% 5%;
+  transition: all 0.25s;
 }
 form button:hover {
-  color: rgb(6, 19, 93);
+  box-shadow: 0 0 8px blue;
+  text-shadow: 3px 3px 4px black;
+  transform: scale(1.2);
+  background-color: rgb(0, 38, 255);
+  
 }
 .contact-div {
   width: 50%;
